Fixed line spacing

--- a/src/proj3HughesLavoieLinMalionek/Main.fxml
+++ b/src/proj3HughesLavoieLinMalionek/Main.fxml
@@ -11,7 +11,7 @@
    <center>
       <ScrollPane fx:id="compositionPane" BorderPane.alignment="CENTER">
          <content>
-            <VBox fx:id="compositionBox" />
+            <VBox fx:id="compositionBox" onMouseClicked="#addNoteOnClick" />
          </content>
       </ScrollPane>
    </center>
