--- a/src/proj3HughesLavoieLinMalionek/Main.fxml
+++ b/src/proj3HughesLavoieLinMalionek/Main.fxml
@@ -14,11 +14,14 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
+<?import javafx.scene.shape.Line?>
 <BorderPane stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <ScrollPane fx:id="compositionPane" BorderPane.alignment="CENTER">
+      <ScrollPane BorderPane.alignment="CENTER">
          <content>
-            <Pane fx:id="compositionBox" onMouseClicked="#addNoteOnClick" />
+            <Pane fx:id="compositionBox" onMouseClicked="#addNoteOnClick" >
+                <Line fx:id="redLine"  endY="1280" stroke="red" visible="false"/>
+            </Pane>
          </content>
       </ScrollPane>
    </center>
@@ -29,7 +32,7 @@
                    <items>
                        <MenuItem onAction="#exitProgram" text="Exit">
                            <accelerator>
-                               <KeyCodeCombination alt="UP" code="Q" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                               <KeyCodeCombination alt="UP" code="Q" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                            </accelerator></MenuItem>
                    </items>
                </Menu>
@@ -37,11 +40,11 @@
                    <items>
                        <MenuItem onAction="#handlePlay" text="Play">
                            <accelerator>
-                               <KeyCodeCombination alt="UP" code="P" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                               <KeyCodeCombination alt="UP" code="P" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                            </accelerator></MenuItem>
                        <MenuItem onAction="#stopComposition" text="Stop">
                            <accelerator>
-                               <KeyCodeCombination alt="UP" code="S" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                               <KeyCodeCombination alt="UP" code="S" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                            </accelerator></MenuItem>
                    </items>
                </Menu>
